crates/djls-semantic/tests/snapshots/corpus__repos__sentry__src__sentry__templatetags__sentry_api.py.snap
---
source: crates/djls-semantic/tests/corpus.rs
expression: snapshot(result)
---
tag_rules:
  "src.sentry.templatetags.sentry_api::tag::convert_to_json":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: obj
        required: true
        kind: Variable
        position: 0
    as_var: strip
  "src.sentry.templatetags.sentry_api::tag::get_recipient_context":
    arg_constraints:
      - Min: 2
      - Max: 3
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: request
        required: true
        kind: Variable
        position: 0
      - name: escape
        required: false
        kind: Variable
        position: 1
    as_var: strip
  "src.sentry.templatetags.sentry_api::tag::serialize":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: obj
        required: true
        kind: Variable
        position: 0
    as_var: strip
  "src.sentry.templatetags.sentry_api::tag::serialize_detailed_org":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: obj
        required: true
        kind: Variable
        position: 0
    as_var: strip
filter_arities: {}
block_specs: {}
