crates/djls-semantic/tests/snapshots/corpus__repos__sentry__src__sentry__templatetags__sentry_features.py.snap
---
source: crates/djls-semantic/tests/corpus.rs
expression: snapshot(result)
---
tag_rules:
  "src.sentry.templatetags.sentry_features::tag::feature":
    arg_constraints:
      - Min: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    diagnostic_messages:
      - constraint:
          ArgumentCount:
            Min: 2
        message:
          PercentFormat:
            template: "%r tag requires an argument"
            args:
              - SplitElement:
                  Forward: 0
    extracted_args:
      - name: name
        required: true
        kind: Variable
        position: 0
    as_var: keep
filter_arities: {}
block_specs:
  "src.sentry.templatetags.sentry_features::tag::feature":
    end_tag: endfeature
    intermediates:
      - else
    opaque: false
