crates/djls-semantic/tests/snapshots/corpus__repos__sentry__src__sentry__templatetags__sentry_platforms.py.snap
---
source: crates/djls-semantic/tests/corpus.rs
expression: snapshot(result)
---
tag_rules:
  "src.sentry.templatetags.sentry_platforms::tag::letter_platform_svg":
    arg_constraints:
      - Min: 3
      - Max: 5
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: display_name
        required: true
        kind: Variable
        position: 0
      - name: identifier
        required: true
        kind: Variable
        position: 1
      - name: size
        required: false
        kind: Variable
        position: 2
      - name: rounded
        required: false
        kind: Variable
        position: 3
    as_var: strip
  "src.sentry.templatetags.sentry_platforms::tag::platform_avatar":
    arg_constraints:
      - Min: 2
      - Max: 3
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: display_name
        required: true
        kind: Variable
        position: 0
      - name: size
        required: false
        kind: Variable
        position: 1
    as_var: strip
filter_arities: {}
block_specs: {}
